fix(button): fixes vertical alignment issue with `md-fab` button
Closes #914.

--- a/src/components/icon/icon.scss
+++ b/src/components/icon/icon.scss
@@ -6,6 +6,10 @@ md-icon {
   margin-top: 5px;
   background-repeat: no-repeat no-repeat;
   pointer-events: none;
+  display: flex;
+  object.md-icon {
+    display: inline-block;
+  }
 }
 svg, object {
   fill: currentColor;
